--- a/_layouts/blog_by_tag.html
+++ b/_layouts/blog_by_tag.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-
 <div class="home">
   <article class="feature-image" >
   	<div style="background-image: url('{{ site.baseurl }}/{{ site.theme.place_holder_image }}')"/>
@@ -28,11 +27,11 @@ layout: default
 		    </p>
 		  </header>
 		  <div class="excerpt">
-		  {% assign num = post.content | number_of_words %}
+		  {% assign num = post.content | size %}
 		  {% if  num  < site.theme.visiblewords %}
 		    {{ post.content }}
 		  {% else %}
-		    {{ post.content | truncatewords: site.theme.visiblewords }}
+		    {{ post.content | truncate: site.theme.visiblewords }}
 		    <p>
 		    <a class="text" href="{{ post.url | prepend: site.baseurl }}">
 		      {{ site.theme.str_continue_reading }}
