Update one article

--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -1,5 +1,6 @@
 // pygments-css (https://github.com/richleland/pygments-css)
-
+.highlight{background: #f8f8f8;padding: 5px; border: 1px solid #ccc}
+.highlight pre  {line-height: 1.2em;  }
 .hll { background-color: #ffffcc }
 .c { color: #999988; font-style: italic } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
