--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -1,12 +1,12 @@
 // pygments-css (https://github.com/richleland/pygments-css)
-.highlight{background: #f8f8f8;padding: 5px; border: 1px solid #ccc}
+.highlight{background: #f8f8f8;padding: 15px; border: 1px solid #ccc}
 .highlight pre  {line-height: 1.2em;  }
 .hll { background-color: #ffffcc }
 .c { color: #999988; font-style: italic } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .k { color: #000000; font-weight: bold } /* Keyword */
 .o { color: #000000; font-weight: bold } /* Operator */
-.cm { color: #999988; font-style: italic; font-family: "Microsoft YaHei","Open Sans",Helvetica,Arial,sans-serif;} /* Comment.Multiline */
+.cm { color: #999988; font-style: italic; font-family: "Microsoft YaHei"} /* Comment.Multiline */
 .cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
 .c1 { color: #999988; font-style: italic } /* Comment.Single */
 .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
