--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,12 @@ layout: default
   <section class="post-content">
   {{ content }}
   </section>
-  
+  <div align="center">
+    <font color="#1ABC9C">
+    <br>
+    如未特殊注明，博客内容均为博主原创文章，通过 Creative Commons 4.0 BY License 授权转载。
+    </font>
+  </div>
 </article>
 
 <!-- Post navigation -->
