Update post and layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,6 +62,12 @@ layout: default
                 post-container">
 
 				{{ content }}
+                <br>
+                <p align = "center" >
+                  <font color=#0085a1>
+                    若非特殊注明，文章均为博主原创，通过 CC 4.0 BY License 授权转载
+                  </font>
+                </p>
 
                 <hr>
 
