--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,11 +63,13 @@ layout: default
 
 				{{ content }}
                 <br>
+                <div class="copyright">
                 <p align = "center" >
-                  <font color=#0085a1>
+                  <font size="2.5px", color="grey">
                     若非特殊注明，文章均为博主原创，通过 CC 4.0 BY License 授权转载
                   </font>
                 </p>
+              </div>
 
                 <hr>
 
