--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,12 @@
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
   "TeX": {
+    equationNumbers: {autoNumber: ["none"]},
     Macros: {
       AA : "{\\unicode{x212B}}",
       oiiint : "{\\rlap{\\subset}\\mkern-0.11em\\rlap\\int\\mkern0.3em\\rlap\\int\\mkern0.14em\\int\\mkern-1.1em\\supset}",
       oiint : "{\\rlap{\\subset}\\mkern-0.24em\\iint\\mkern-1.09em\\supset}"
-    },
-    equationNumbers: {autoNumber: ["AMS"], useLabelIds: true}
+    }
   },
   "HTML-CSS": {scale: 90},
   "tex2jax": {
