--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1517,7 +1517,7 @@ code {
   padding: 2px 4px;
   font-size: 90%;
   color: #c7254e;
-  background-color: #272822;
+  background-color: #f9f2f4;
   border-radius: 4px;
 }
 kbd {
