--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,15 @@ layout: default
                     {% include multilingual-sel.html %}
                 {% endif %}
 
-				{{ content }}
+                {{ content }}
+                
+                <div class="copyright">
+                    <p align = "center" >
+                        <font size="2.5px", color="grey">
+                        若非特殊注明，文章均为博主原创，通过 CC 4.0 BY License 授权转载
+                        </font>
+                    </p>
+                </div>
 
                 <hr style="visibility: hidden;">
                 <ul class="pager">
