--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,6 +35,12 @@
 {% if site.service-worker %}
 <script src="{{ "/js/snackbar.js " | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/sw-registration.js " | prepend: site.baseurl }}"></script>
+{% else %}
+<script>
+    navigator.serviceWorker.getRegistrations().then(registrations => {
+        for(let registration of registrations) registration.unregister();
+    });
+</script>
 {% endif %}
 
 <!-- async load function -->
